--- a/src/index.html
+++ b/src/index.html
@@ -14,15 +14,15 @@
       text-align: center;
       font-size: 20px;
       font-weight: 200;
-      color: indianred;
+      color: #00796B;
     }
 
     .spinner {
       width: 70px;
       height: 70px;
       margin: 20px auto;
-      background-color: coral;
-      -webkit-animation:  sk-rotateplane 1.2s infinite ease-in-out;
+      background-color: #009688;
+      -webkit-animation: sk-rotateplane 1.2s infinite ease-in-out;
       animation: sk-rotateplane 1.2s infinite ease-in-out;
     }
 
